# mono

./: .dev.vars.example  .dockerignore  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.json  Dockerfile  HACKING.md  README-external.md  README.md  build-latest-reflect.sh  build.js  eslint-config.json  fly.toml  jest.config.js  keepalive.sh  litestream.yml  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  publish-if-production.sh  replicache-12.0.0.tgz  replicache-12.0.1.tgz  reps-0.1.0.tgz  rollup.config.js  set-new-room-secret.sh  syncpack.config.js  tsconfig.all.json  tsconfig.json  turbo.json  vercel.json  vitest.workspace.js  web-test-runner.config.js  web-test-runner.config.mjs  wip.tx  wrangler-staging.toml  wrangler.toml  (+2 more)
.husky/: pre-commit  pre-push
bundle-sizes/: data.js  index.html
demo/: index.html
doc/: README.md  docusaurus.config.js  migration.md  package-lock.json  package.json  server-api.md  server-dev-api.md  sidebars.js
example/: index.ts
hooks/: use-document-size.ts  use-element-size.ts  use-timeout.ts  use-vh-style-prop.ts  use-window-size.ts
mirror/: README.md
pages/: _app.tsx  index.tsx
perf/: compare-utf8.ts  data.ts  hash.ts  index.html  map-loop.ts  perf.ts  replicache.ts  runner.js  storage.ts  tsconfig.json  uuid.ts
perf-v2/: data.js  index.html
prod/: .prettierrc.yaml  package.json
public/: alive.glb
raw-assets/: alive-text.ai  alive.blend  alive.blend1  environment_circus.env  environment_snow.env  export-points.py  morph.sh
renderer/: .gitignore  Cargo.toml  build.sh
renderer/pkg/: renderer.d.ts  renderer.js  renderer_bg.wasm  renderer_bg.wasm.d.ts
renderer/pkg/snippets/renderer-ba6236b463686f63/src/: constants.ts
renderer/src/: constants.ts  drawing.rs  export-splatters.rs  lib.rs  main.rs  physics.rs  tests.rs
renderer/src/drawing/: data.rs  mod.rs  splatters.rs
renderer/src/physics/: hulls.rs  mod.rs
server/: package-lock.json  package.json  rollup.config.js  tsconfig.json
src/: asserts.ts  mod.ts  (+74 more)
(+1402 files in other folders)
