[package]
name = "renderer"
version = "0.1.0"
authors = ["Jesse Ditson"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"
image = "0.24.5"
imageproc = "0.23.0"
palette = "0.6.1"
lazy_static = "1.4.0"
mut_static = "5.0.0"
js-sys = "0.3.60"
web-sys = { version = "0.3.60", features = ["CanvasRenderingContext2d", "ImageData"] }

console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
