[package]
name = "renderer"
version = "0.1.0"
authors = ["Jesse Ditson"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"
image = "0.24.5"
rapier3d = { version = "0.17.1", features = [ "simd-stable", "serde-serialize" ] }
base64 = "0.21.0"
flate2 = "1.0.25"
nalgebra = "0.32.1"
serde = "1.0.152"
bincode = "1.3.3"
lazy_static = "1.4.0"
mut_static = "5.0.0"
web-sys = { version = "0.3.60", features = ["CanvasRenderingContext2d", "ImageData"] }

console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
