[package]
name = "renderer"
version = "0.1.0"
authors = ["Jesse Ditson"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "export-splatters"
path = "src/export-splatters.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"
image = "0.24.5"
base64 = "0.21.0"
lazy_static = "1.4.0"
mut_static = "5.0.0"
web-sys = { version = "0.3.60", features = ["CanvasRenderingContext2d", "ImageData"] }

console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
debug = true

[package.metadata.wasm-pack.profile.release]
# previously had just ['-O4']
wasm-opt = ['-O4', '-g']
